--- a/app/assets/stylesheets/pdf.scss
+++ b/app/assets/stylesheets/pdf.scss
@@ -1,140 +1,3 @@
-@import "bootstrap";
-
-::first-letter {
-  text-transform: uppercase;
-}
-
-.content {
-
-  font-family: "Helvetica Neue", Helvetica, Arial, Sans-Serif, serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  max-width: 98%;
-  margin: 1em auto auto auto;
-
-  .center-div {
-    h3 {
-      text-align: center;
-    }
-    background-color: #fcfcfc;
-    border: 1px solid #a3a3a3;
-    border-radius: 2px;
-    padding: 1.5vw 1.5vw 0 1.5vw;
-    margin: 0 auto;
-    max-width: 1000px /* value of your choice which suits your alignment */
-  }
-
-  #titleBadge {
-    text-align: center;
-    border: 1.5px solid #000000;
-    box-shadow: 3px 0 18px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 1px;
-    color: white;
-  }
-
-  h2 {
-    max-width: 20%;
-    font-size: 1.3vw;
-    text-transform: uppercase;
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-  }
-
-  .loginScreen {
-    margin-top: 10%;
-    text-align: center;
-
-    h2 {
-      text-align: center;
-      text-transform: uppercase;
-      position: relative;
-      width: 100%;
-    }
-  }
-
-  .createButton {
-    text-align: center;
-  }
-
-  .table {
-    margin-top: 1%;
-    box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
-    -webkit-box-shadow: 10px 0 40px 2px rgba(0, 0, 0, 0.37);
-
-    .emptyTable {
-      text-align: center;
-    }
-
-
-    .centerCell {
-      text-align: center;
-    }
-
-    .rightCell {
-      text-align: right;
-    }
-
-    tr {
-      cursor: pointer;
-
-      th, td {
-        padding: 0.65rem;
-        border-top: 0.05px solid rgba(0, 0, 0, 0.17);
-      }
-
-      td:first-letter {
-        text-transform: uppercase;
-      }
-    }
-
-    .description-header {
-      width: 30vw;
-    }
-  }
-
-  .picker-container {
-    display: -webkit-box;
-  }
-
-  .smallerLabel {
-    font-size: 0.9em;
-  }
-
-  .time-picker {
-    width: 50%;
-  }
-
-  .picker-container {
-    display: -webkit-box;
-  }
-
-  .form-login {
-    margin: auto;
-  }
-
-  .nav-item {
-    z-index: 9;
-  }
-
-  .tab-content {
-    margin-top: 1%;
-  }
-}
-
-#notice {
-  text-align: center;
-  position: absolute;
-  max-width: 20%;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  bottom: 1vh;
-}
-
 .pdf {
   ol, ul {
     list-style: none;
@@ -261,13 +124,10 @@
     }
 
     #number {
-      h2 {
-        margin-left: 22%;
-        margin-top: 1%;
-
-      }
+      margin-left: 10px;
       font-size: 25px;
-      margin-top: 4vh;
+      position: relative;
+      top: -5px;
     }
   }
 
@@ -275,8 +135,8 @@
     position: absolute;
     float: left;
     min-width: 220px;
-    top: 40mm;
-    right: 70mm;
+    top: 125px;
+    left: 500px;
   }
 
   table {
@@ -414,7 +274,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-
     h5 {
       text-align: center;
       margin-top: 30px;
@@ -436,61 +295,8 @@
   .ib_bottom_row_commands {
     margin-left: 30px !important;
   }
-
   .avoidbreak {
     break-inside: avoid;
     page-break-inside: avoid;
   }
 }
-
-.flickr_pagination {
-  display: table;
-  margin: auto;
-  text-align: center;
-  padding: 0.3em;
-  cursor: default;
-}
-
-.flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
-  padding: 0.2em 0.5em;
-}
-
-.flickr_pagination .disabled {
-  color: #aaaaaa;
-}
-
-.flickr_pagination .current {
-  font-style: normal;
-  font-weight: bold;
-  color: #000000;
-}
-
-.flickr_pagination a {
-  border: 1px solid #dddddd;
-  color: #0063dc;
-  text-decoration: none;
-}
-
-.flickr_pagination a:hover, .flickr_pagination a:focus {
-  border-color: #003366;
-  background: #0063dc;
-  color: white;
-}
-
-.flickr_pagination .page_info {
-  color: #aaaaaa;
-  padding-top: 0.8em;
-}
-
-.flickr_pagination .previous_page, .flickr_pagination .next_page {
-  border-width: 2px;
-}
-
-.flickr_pagination .previous_page {
-  margin-right: 1em;
-}
-
-.flickr_pagination .next_page {
-  margin-left: 1em;
-}
-
