--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
         <a class="nav-link" href="/services">Prestations</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/extras">Divers</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/customers">Clients</a>
       </li>
       <li class="nav-item">
