--- a/app/views/layouts/pdf.html.html.erb
+++ b/app/views/layouts/pdf.html.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDFs - Ruby on Rails</title>
+  <meta charset="UTF-8"/>
+  <title>Facture</title>
     <%= wicked_pdf_stylesheet_link_tag "style" %>
 </head>
-<body>
 <%= yield %>
-</body>
 </html>
